--- a/template/business/loan_applications.html
+++ b/template/business/loan_applications.html
@@ -30,7 +30,9 @@
     .navbar-brand {
       font-size: 1.8rem;
       font-weight: 500;
-      color: var(--primary-color) !important;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .navbar-nav .nav-link {
