--- a/template/business/transactions.html
+++ b/template/business/transactions.html
@@ -30,9 +30,11 @@
     }
 
     .navbar-brand {
-      font-size: 1.6rem; /* Reduced font size */
-      font-weight: 600;
-      color: var(--primary-color) !important;
+      font-size: 1.8rem;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .navbar-nav .nav-link {
