--- a/template/business_dashboard.html
+++ b/template/business_dashboard.html
@@ -29,8 +29,10 @@
 
     .navbar-brand {
       font-size: 1.8rem;
-     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: var(--primary-color) !important;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .navbar-nav .nav-link {
