--- a/template/mfi/download.html
+++ b/template/mfi/download.html
@@ -33,9 +33,11 @@
     }
     
     .navbar-brand {
-      font-weight: bold;
-      color: var(--logo-color) !important;
-      transition: color 0.3s ease;
+      font-size: 1.8rem;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
     
     .navbar-brand:hover {
