--- a/template/mfi/mfis.html
+++ b/template/mfi/mfis.html
@@ -30,8 +30,10 @@
 
   .navbar-brand {
     font-size: 1.8rem;
-    color: #3498db !important;
-    letter-spacing: -1px;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
   }
 
  .nav-link {
