--- a/template/mfi/records.html
+++ b/template/mfi/records.html
@@ -26,9 +26,11 @@
     }
     
     .navbar-brand {
-     color:#0056b3 !important;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 1.8rem;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
     
     .navbar-light .navbar-nav .nav-link {
