--- a/template/register.html
+++ b/template/register.html
@@ -26,9 +26,11 @@
     }
 
     .navbar-brand {
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: var(--primary-color) !important;
+      font-size: 1.8rem;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .nav-link {
