--- a/template/business/login.html
+++ b/template/business/login.html
@@ -43,8 +43,10 @@
     }
     .navbar-brand {
       font-size: 1.8rem;
-      font-weight: 600;
-      color: var(--primary-color) !important;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .navbar-nav .nav-link {
