--- a/template/mfi/apply_loan.html
+++ b/template/mfi/apply_loan.html
@@ -26,17 +26,17 @@
       .navbar {
         background-color: var(--dark-bg) !important;
         padding: 1rem 0;
-        margin: 0 20px;
       }
     
       .navbar-brand {
-        font-size: 2rem;
-        font-weight: 700;
-        color: #3498db !important;
-        margin-right: auto;
+        font-size: 1.8rem;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
       }
     
-      .navbar-brand, .nav-link {
+       .nav-link {
         color: white !important;
       }
     
@@ -135,7 +135,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="/">TESAA</a>
+          <a class="navbar-brand" href="/">Tesaa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
