--- a/template/mfi_dashboard.html
+++ b/template/mfi_dashboard.html
@@ -30,8 +30,10 @@
 
     .navbar-brand {
       font-size: 1.8rem;
-      color: #007bff!important;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: 500;
+      color: #3498db !important;
+      margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
 
     .navbar-light .navbar-nav .nav-link {
