--- a/template/business/loan_applications.html
+++ b/template/business/loan_applications.html
@@ -188,7 +188,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <span class="navbar-text me-3">Welcome, John's Small Business</span>
+            <span class="navbar-text me-3">Welcome, {{.Email}} </span>
           </li>
           <li class="nav-item">
             <a href="/logout" class="btn btn-outline-light">Logout</a>
