--- a/template/business/active_loans.html
+++ b/template/business/active_loans.html
@@ -193,7 +193,7 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <span class="nav-link text-white">Welcome, John's Small Business</span>
+              <span class="nav-link text-white">Welcome, {{.Email}}</span>
             </li>
             <li class="nav-item">
               <a href="/logout" class="btn btn-outline-light">Logout</a>
